# fastapi-project

./: .gitignore  README.md  pyproject.toml  sql_app.db
books_data/: parser.py  text.csv
sql_app/: crud.py  database.py  main.py  models.py  schemas.py
