[project]
name = ""
version = ""
description = ""
authors = [
    {name = "harrisdurrani", email = "harris.durrani@hotmail.com"},
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "sqlalchemy>=2.0.28",
    "pandas>=2.2.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

